--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -20,4 +20,7 @@
     <bool name="def_screen_brightness_automatic_mode">true</bool>
     
     <bool name="def_bluetooth_on">false</bool>
+
+    <fraction name="def_window_animation_scale">50%</fraction>
+    <fraction name="def_window_transition_scale">50%</fraction>
 </resources>
